fixed spacing on mobile version

--- a/src/app/styles/Header.module.css
+++ b/src/app/styles/Header.module.css
@@ -133,7 +133,7 @@
   
   @media (max-width: 600px) {
     .headerPieces {
-      font-size: 10px;
+      font-size: 9px;
       padding: 5px;
     }
     .logoSpace{
@@ -143,7 +143,7 @@
       display: none;
     }
     .logoSpaceContainer{
-      width: 95%;
+      width: 100%;
     }
     .logoContainer{
       position: relative;
