--- a/src/app/styles/buy.module.css
+++ b/src/app/styles/buy.module.css
@@ -715,10 +715,13 @@
   @media (max-width: 640px) {
     .padding{
       padding: 10px;
+      display: flex;
+    justify-content: space-evenly;
+    width: 25%;
     }
     .iconContainer{
-      height: 10px;
-      width: 10px;
+      height: 20px;
+      width: 20px;
     }
     .blackButton{
       font-size:16px;
@@ -735,7 +738,7 @@
       font-size: 10px;
       font-size: 8px;
       width: 100%;
-      justify-content: center;
+      justify-content: space-evenly;
     }
     .sliver a{
       padding: 0px;
