--- a/src/app/styles/homepage.module.css
+++ b/src/app/styles/homepage.module.css
@@ -1179,6 +1179,7 @@
     }
     .boxReview{
       margin: 10px;
+      height: 200px;
     }
   
     .logoSpace {
@@ -1234,6 +1235,12 @@
   @media (max-width: 600px) {
     .hideBox{
       display: none;
+    }
+    .centerStuff{
+      height: 185px;
+    }
+    .section{
+      padding: 0px;
     }
     .box{
       width: 200px;      
